# docs/swagger.json
@@ -909,6 +909,12 @@
                             "$ref": "#/definitions/model.Employee"
                         }
                     },
+                    "400": {
+                        "description": "Cannot disconnect email when Telegram is not connected",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized - invalid or missing token",
                         "schema": {
@@ -1101,6 +1107,12 @@
                         "description": "Telegram disconnected successfully",
                         "schema": {
                             "$ref": "#/definitions/model.Employee"
+                        }
+                    },
+                    "400": {
+                        "description": "Cannot disconnect Telegram when email is not connected",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
                     "401": {
@@ -4096,7 +4108,7 @@
                     "type": "string"
                 },
                 "startAt": {
-                    "$ref": "#/definitions/model.LocalTime"
+                    "type": "string"
                 },
                 "tableId": {
                     "type": "string"
@@ -4431,7 +4443,7 @@
                 }
             }
         },
-        "model.ErrorResponse": {
+        "model.ErrorDetail": {
             "type": "object",
             "properties": {
                 "code": {
@@ -4442,17 +4454,21 @@
                     "type": "string",
                     "example": "Additional error details"
                 },
+                "is_show": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "message": {
                     "type": "string",
                     "example": "Error message"
                 }
             }
         },
-        "model.LocalTime": {
+        "model.ErrorResponse": {
             "type": "object",
             "properties": {
-                "time.Time": {
-                    "type": "string"
+                "error": {
+                    "$ref": "#/definitions/model.ErrorDetail"
                 }
             }
         },
